--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
   "license": "MIT",
   "description": "",
   "devDependencies": {
-    "@types/node": "20.14.9",
     "nodemon": "3.1.4",
-    "prettier": "3.3.2",
-    "typescript": "5.5.2"
+    "prettier": "3.3.2"
   },
   "dependencies": {
     "cors": "^2.8.5",
